[package]
name = "physics"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
cgmath = { version = "0.18", features = ["serde"] }
png = "0.17"
pretty_env_logger = "0.4"
thiserror = "1"
tobj = { version = "3", features = ["log"] }
# vulkanalia = { version = "0.22.0", features = [
#     "libloading",
#     "provisional",
#     "window",
# ] }
winit = "0.28"
rand = "0.8.5"
hecs = "0.10.3"
bytemuck = "1.14.0"
bincode = "1.3.3"
serde = { version = "1.0.189", features = ["derive"] }
ash = { version = "0.37.3", features = ["linked"] }
ash-window = "0.12.0"
